[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/hiicmoon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=5]
bounce = 0.3

[sub_resource type="CircleShape2D" id=3]
radius = 12.0

[sub_resource type="CircleShape2D" id=6]
radius = 14.0357

[node name="Ball" type="RigidBody2D" groups=["Ball"]]
position = Vector2( 252, 47 )
collision_layer = 2
collision_mask = 5
physics_material_override = SubResource( 5 )
gravity_scale = 10.0
continuous_cd = 2
angular_damp = 4.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.694118, 0.196078, 0.196078, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0166667, 0.0166667 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_Timer_timeout"]
